# iops

./: .gitignore  .gitlab-ci.yml  .gitmodules  CACHE_USAGE.md  CLAUDE.md  MANIFEST.in  PUBLISHING.md  README.html  README.md  bo_history.csv  codemeta.json  concurrency_test.yaml  config.ini  custom.yaml  dashcli.py  default.yaml  default_config.ini  diff.txt  docs_update_plot_types.md  environment.yml  example_bayesian.yaml  example_plafrim.yaml  example_plafrim_bayesian.yaml  example_simple.yaml  example_simple_rounds.yaml  go.mod  hugo.toml  install_ior.sh  iops.py  iops_config.yaml  iops_copy.db  ior_benchmark.yaml  mkdocs.yml  plafrim.yaml  pyproject.toml  requirements-docs.txt  requirements.txt  results.db  run_tests.sh  setup.py  (+7 more)
content/: _index.md  search.md
docs/: CACHE_USAGE.md  CLAUDE.md  YAML_FORMAT.md  index.md  yaml_manual.md
examples/: example_bayesian.yaml  example_plafrim.yaml  example_simple.yaml  example_simple_rounds.yaml
iops/: VERSION  __init__.py  fileutils.py  logger.py  main.py  resource.py
layouts/: index.json
scripts/: build_api_docs.sh
spack-repo/: repo.yaml
tests/: README.md  conftest.py  test_adaptive.py  test_adaptive_cache.py  test_archive.py  test_archive_partial.py  test_bayesian_feedback.py  test_bench_ior.py  test_blas_thread_cap.py  test_bugfix_regressions.py  test_cache.py  test_cli.py  test_cli_watch_fixes.py  test_config.py  test_config_loader.py  test_config_validation.py  test_constraints.py  test_convert.py  test_executors.py  test_files_utils.py  test_find_enhancements.py  test_gallery.py  test_gpu_sampling.py  test_input_files.py  test_integration.py  test_kickoff_mode.py  (+29 more)
(+261 files in other folders)
