[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iops-benchmark"
version = "3.0.2"
description = "A generic benchmark orchestration framework for automated parametric experiments"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
    {name = "TADAAM - INRIA Bordeaux", email = "luan.teylo@inria.fr"}
]
keywords = ["benchmark", "performance", "testing", "parametric", "sweep", "hpc", "slurm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "pyyaml",
    "ruamel.yaml",
    "psutil",
    "sqlmodel",
    "smt",
    "scikit-optimize",
    "pandas>=2.1.0",
    "jinja2>=3.0.0",
]

[project.urls]
Homepage = "https://gitlab.inria.fr/lgouveia/iops"
Documentation = "https://gitlab.inria.fr/lgouveia/iops"
Repository = "https://gitlab.inria.fr/lgouveia/iops"
Issues = "https://gitlab.inria.fr/lgouveia/iops/-/issues"

[project.scripts]
iops = "iops.main:main"

[tool.setuptools.packages.find]
include = ["iops*"]

[tool.setuptools.package-data]
iops = ["VERSION", "**/*.yaml", "**/*.yml"]
